--- a/debian/install
+++ b/debian/install
@@ -1,23 +1,12 @@
-# Bootloaders
-bootloaders/atmega/*.hex                	/usr/share/arduino-hardware/arduino/avr/bootloaders/atmega
-bootloaders/atmega8/*.hex               	/usr/share/arduino-hardware/arduino/avr/bootloaders/atmega8
-bootloaders/bt/*.hex                    	/usr/share/arduino-hardware/arduino/avr/bootloaders/bt
-bootloaders/caterina/*.hex              	/usr/share/arduino-hardware/arduino/avr/bootloaders/caterina
-bootloaders/caterina-Arduino_Robot/*.hex	/usr/share/arduino-hardware/arduino/avr/bootloaders/caterina-Arduino_Robot
-bootloaders/caterina-LilyPadUSB/*.hex   	/usr/share/arduino-hardware/arduino/avr/bootloaders/caterina-LilyPadUSB
-bootloaders/gemma/*.hex                 	/usr/share/arduino-hardware/arduino/avr/bootloaders/gemma
-bootloaders/lilypad/src/.hex            	/usr/share/arduino-hardware/arduino/avr/bootloaders/lilypad
-bootloaders/optiboot/*.hex              	/usr/share/arduino-hardware/arduino/avr/bootloaders/optiboot
-bootloaders/stk500v2/*.hex              	/usr/share/arduino-hardware/arduino/avr/bootloaders/stk500v2
-
-# Cores
-cores	/usr/share/arduino-hardware/arduino/avr/cores
-
-# Firmwares
-#firmwares	/usr/share/arduino-hardware/arduino/avr/firmwares
-
-# Libraries
-libraries	/usr/share/arduino-hardware/arduino/avr/libraries
-
-# Variants
-variants	/usr/share/arduino-hardware/arduino/avr/variants
+bootloaders    	/usr/share/arduino-hardware/arduino/avr
+cores          	/usr/share/arduino-hardware/arduino/avr
+# TODO: Build firmwares
+firmwares      	/usr/share/arduino-hardware/arduino/avr
+libraries      	/usr/share/arduino-hardware/arduino/avr
+variants       	/usr/share/arduino-hardware/arduino/avr
+boards.txt     	/usr/share/arduino-hardware/arduino/avr
+platform.txt   	/usr/share/arduino-hardware/arduino/avr
+programmers.txt	/usr/share/arduino-hardware/arduino/avr
+# TODO: Is this ok?
+lufa100807     	/usr/share/arduino-hardware/arduino/avr
+lufa111009     	/usr/share/arduino-hardware/arduino/avr
